# dxi-mcp-server

./: .gitignore  .whitesource  CONSOLIDATION_COMPLETE.md  CONSOLIDATION_ROADMAP.md  DCT_MCP_TEST_PLAN.md  LICENSE.md  README.md  TEST_VERIFICATION_REPORT.md  instructions.md  pyproject.toml  requirements.txt  start_mcp_server_windows_python.bat  start_mcp_server_windows_uv.bat  swagger.json
.github/: CLA.md  CODEOWNERS  CODE_OF_CONDUCT.md  COMMUNITY_GUIDELINES.md  CONTRIBUTING.md  CORPORATE_CONTRIBUTOR_LA.md  PULL_REQUEST_TEMPLATE.md  STATEMENT_OF_SUPPORT.md  copilot-instructions.md
src/dct_mcp_server/config/: config.py
src/dct_mcp_server/core/: decorators.py
src/dct_mcp_server/dct_client/: client.py
src/dct_mcp_server/tools/: compliance_endpoints_tool.py  dataset_endpoints_tool.py  dsources_endpoints_tool.py  engine_endpoints_tool.py  environment_endpoints_tool.py  job_endpoints_tool.py  reports_endpoints_tool.py  snapshots_endpoints_tool.py  sources_endpoints_tool.py  vdbs_endpoints_tool.py
src/dct_mcp_server/toolsgenerator/: consolidation_config.yaml  consolidator.py  driver.py
src/dct_mcp_server/toolsgenerator/endpoints/: compliance_endpoints.txt  dataset_endpoints.txt  dsources_endpoints.txt  engine_endpoints.txt  environment_endpoints.txt  job_endpoints.txt  reports_endpoints.txt  snapshots_endpoints.txt  sources_endpoints.txt  vdbs_endpoints.txt
