[project]
name = "dct-mcp-server"
version = "2025.0.1.0-preview"
description = "Delphix DCT API MCP Server - A Model Context Protocol server for the Delphix Data Control Tower API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.13.2",
    "httpx>=0.24.0",
    "pyyaml",
    "requests",
    "urllib3>=2.6.3"
]

[project.scripts]
dct-mcp-server = "dct_mcp_server.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dct_mcp_server"]
